--- a/InstagramDesktopUi/Controls/Post.xaml
+++ b/InstagramDesktopUi/Controls/Post.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:InstagramDesktopUi.Controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             xmlns:uc="clr-namespace:InstagramDesktopUi.Controls"
+             mc:Ignorable="d" Name="post" Background="White">
     <Grid>
             
     </Grid>
