--- a/InstagramDesktopUi/Controls/Post.xaml
+++ b/InstagramDesktopUi/Controls/Post.xaml
@@ -7,6 +7,11 @@
              xmlns:uc="clr-namespace:InstagramDesktopUi.Controls"
              mc:Ignorable="d" Name="post" Background="White">
     <StackPanel Width="270" Margin="0 0 13 13">
-            
+        <Border CornerRadius="10" Margin="0 0 0 6" Height="300">
+            <Border.Background>
+                <ImageBrush Stretch="Fill" ImageSource="{Binding Path=PostSource,ElementName=post}"/>
+            </Border.Background>
+        </Border>
+        
     </StackPanel>
 </UserControl>
