--- a/InstagramDesktopUi/Controls/Profile.xaml
+++ b/InstagramDesktopUi/Controls/Profile.xaml
@@ -7,6 +7,17 @@
              mc:Ignorable="d" 
              Name="profile">
     <Border HorizontalAlignment="Center" BorderThickness="1.5" CornerRadius="100">
-            
+        <Border.Style>
+            <Style TargetType="Border">
+                <Setter Property="Padding" Value="{Binding Path=PaddingNum,ElementName=profile}"/>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Padding" Value="3"/>
+                        <Setter Property="Margin" Value="2"/>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </Border.Style>
+        
     </Border>
 </UserControl>
