--- a/InstagramDesktopUi/App.xaml
+++ b/InstagramDesktopUi/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:InstagramDesktopUi"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="mainText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#020202" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="TextAlignment" Value="Center" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+        </Style>
+        
     </Application.Resources>
 </Application>
