--- a/InstagramDesktopUi/App.xaml
+++ b/InstagramDesktopUi/App.xaml
@@ -69,5 +69,10 @@
             </Setter>
         </Style>
 
+        <Style x:Key="menuButtonIcon" TargetType="Image">
+            <Setter Property="Width" Value="18" />
+            <Setter Property="Margin" Value="40 0 20 0" />
+        </Style>
+
     </Application.Resources>
 </Application>
