--- a/InstagramDesktopUi/MainWindow.xaml
+++ b/InstagramDesktopUi/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InstagramDesktopUi"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:uc="clr-namespace:InstagramDesktopUi.Controls" 
+        mc:Ignorable="d" FontFamily="Cambria" Background="#FFFFFF"
+        Height="710" Width="1210" MinWidth="930" MinHeight="710">
     <Grid>
         
     </Grid>
