- Add RowDefinitions To Main Grid

--- a/InstagramDesktopUi/MainWindow.xaml
+++ b/InstagramDesktopUi/MainWindow.xaml
@@ -12,5 +12,12 @@
             <ColumnDefinition Width="250"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        
     </Grid>
 </Window>
