--- a/InstagramDesktopUi/MainWindow.xaml
+++ b/InstagramDesktopUi/MainWindow.xaml
@@ -107,6 +107,74 @@
             </Button>
         </StackPanel>
 
+        <!--Top Part-->
+        <StackPanel Grid.Column="1">
+            <!--Top Menu-->
+            <Grid Margin="35 25 35 20">
+                <!--TextBox Search-->
+                <Border BorderBrush="#F3F3F3" Background="#F3F3F3" BorderThickness="1" CornerRadius="5" HorizontalAlignment="Left" Width="220">
+                    <Grid Margin="7 9">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Image Source="/Images/explore.png" Height="20" Margin="5 0 0 0"/>
+                        <TextBlock x:Name="textSearch" MouseDown="textSearch_MouseDown" Text="Search" Style="{StaticResource textHint}"/>
+                        <TextBox Name="txtSearch" TextChanged="txtSearch_TextChanged" Style="{StaticResource textBox}"/>
+                    </Grid>
+                </Border>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button Style="{StaticResource roundButton}">
+                        <Image Source="/Images/notifications.png" Width="22"/>
+                    </Button>
+
+                    <Button Style="{StaticResource roundButton}">
+                        <Image Source="/Images/message.png" Width="21"/>
+                    </Button>
+
+                    <Button Style="{StaticResource addButton}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="/Images/add.png" Width="23" Margin="0 0 7 0"/>
+                            <TextBlock Text="Add Post" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </Button>
+                </StackPanel>
+            </Grid>
+
+            <Grid Margin="35 0 35 15">
+                <TextBlock Text="Stories" FontSize="20" Foreground="#333333" FontWeight="Bold" HorizontalAlignment="Left"/>
+                <Label Content="Watch All" Style="{StaticResource textButton}" HorizontalAlignment="Right"/>
+            </Grid>
+
+            <!--Stories-->
+            <ScrollViewer Margin="35 0" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto" Padding="0 0 0 10">
+                <StackPanel Orientation="Horizontal">
+
+                    <uc:Profile Size="70" Source="/Images/p1.jpg" PaddingNum="5"/>
+                    <uc:Profile Size="70" Source="/Images/p2.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p3.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p4.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p5.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p6.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p7.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p8.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+                    <uc:Profile Size="70" Source="/Images/p9.jpg" PaddingNum="5" Margin="10 0 0 0"/>
+
+                </StackPanel>
+            </ScrollViewer>
+
+            <Grid Margin="35 20">
+                <Label Content="Feed" FontSize="20" Foreground="#333333" FontWeight="Bold" HorizontalAlignment="Left"/>
+
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Label Content="Latest" Style="{StaticResource activeTextButton}"/>
+                    <Label Content="Popular" Style="{StaticResource textButton}" Margin="15 0 0 0"/>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
+
 
     </Grid>
 </Window>
